--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <module>tracer-test/log4j2-test</module>
         <module>tracer-test/log4j-test</module>
 
+
     </modules>
 
     <properties>
@@ -240,6 +241,16 @@
                 <version>1.3.1</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.16.10</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.51</version>
+            </dependency>
             <!-- 对外部框架的一些插件使用 -->
             <dependency>
                 <groupId>javax.servlet</groupId>
@@ -247,6 +258,7 @@
                 <version>3.1.0</version>
                 <scope>provided</scope>
             </dependency>
+
             <!-- HttpClient Dependency -->
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
@@ -301,11 +313,7 @@
                 <version>${jmh.version}</version>
                 <scope>test</scope>
             </dependency>
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>fastjson</artifactId>
-                <version>1.2.51</version>
-            </dependency>
+
         </dependencies>
     </dependencyManagement>
     <build>
