--- a/sofa-tracer-plugins/sofa-tracer-jaeger-plugin/pom.xml
+++ b/sofa-tracer-plugins/sofa-tracer-jaeger-plugin/pom.xml
@@ -37,11 +37,22 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
-        <!-- jager-client -->
+        <!-- jaeger -->
         <dependency>
             <groupId>io.jaegertracing</groupId>
             <artifactId>jaeger-client</artifactId>
             <version>1.6.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.squareup.okhttp3</groupId>
+                    <artifactId>okhttp</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.12.1</version>
         </dependency>
         <!-- opentracing dependency -->
         <dependency>
@@ -64,6 +75,7 @@
             <artifactId>opentracing-util</artifactId>
             <version>0.33.0</version>
         </dependency>
+
         <!-- test dependency -->
         <dependency>
             <groupId>org.jmockit</groupId>
