--- a/tracer-sofa-boot-starter/src/test/resources/application.properties
+++ b/tracer-sofa-boot-starter/src/test/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=test-app-name
 spring.datasource.url=jdbc:mysql://localhost:3306/sofa
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=xxxx
